tests/fsharp/typecheck/sigs/neg81.bsl

neg81.fsx(8,1,8,5): parse error FS0058: Unexpected syntax or possible incorrect indentation: this token is offside of context started at position (6:5). Try indenting this further.
To continue using non-conforming indentation, pass the '--strict-indentation-' flag to the compiler, or set the language version to F# 7.

neg81.fsx(6,6,6,7): parse error FS3156: Unexpected token '+' or incomplete expression
